--- a/lastRounds.html
+++ b/lastRounds.html
@@ -28,9 +28,12 @@
         <div class="container border rounded" style="background-color: #f2f5f8;">
             <h1>Ultimas rodadas:</h1>
             <p id="sp">Sua pontuação: </p>
-            <p id="bp">Melhor pontuação: </p>
+            <ul id="bp">
+                <li>Top 3 pontuações</li>  
+            </ul>
             <p id="sa">Seus acertos: </p>
-            <p id="ba">Maiores acertos: </p>
+            <ul id="ba">
+                <li>Maiores acertos: </li></ul>
             <div class="row">
                 <div class="col">
                     <p class="text-center">Resultado da Rodada:</p>
