--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p>Criado por:</p>
             <ul>
                 <li>Otávio Albuquerque</li>
-                <li>Emirton Souza</li>
+                <li>Emirton Sousa</li>
             </ul>
         </div>
         <div class="container">
